# ten-vad

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
TEN-VAD-TestSet/: TEN-VAD-TestSet-audio-05.scv  TEN-VAD-TestSet-audio-07.scv  TEN-VAD-TestSet-audio-08.scv  TEN-VAD-TestSet-audio-22.scv  TEN-VAD-TestSet-audio-23.scv  TEN-VAD-TestSet-audio-24.scv  TEN_VAD-testSet-audio-01.scv  TEN_VAD-testSet-audio-02.scv  TEN_VAD-testSet-audio-03.scv  TEN_VAD-testSet-audio-04.scv  TEN_VAD-testSet-audio-06.scv  TEN_VAD-testSet-audio-09.scv  TEN_VAD-testSet-audio-11.scv  TEN_VAD-testSet-audio-12.scv  TEN_VAD-testSet-audio-13.scv  TEN_VAD-testSet-audio-16.scv  TEN_VAD-testSet-audio-17.scv  TEN_VAD-testSet-audio-18.scv  TEN_VAD-testSet-audio-19.scv  TEN_VAD-testSet-audio-20.scv  TEN_VAD-testSet-audio-21.scv  TEN_VAD-testSet-audio-25.scv  TEN_VAD-testSet-audio-26.scv  TEN_VAD-testSet-audio-27.scv  TEN_VAD-testSet-audio-28.scv  TEN_VAD-testSet-audio-29.scv  TEN_VAD-testSet-audio-30.scv
examples/: CMakeLists.txt  build-and-deploy-android.sh  build-and-deploy-ios.sh  build-and-deploy-linux.sh  build-and-deploy-mac.sh  build-and-deploy-windows.bat  main.c  plot_pr_curves.py  requirements.txt  sample_array.h  test.py
include/: ten_vad.h  ten_vad.py  ten_vad_enhanced.h  ten_vad_enhanced.py
src/ten_vad/: __init__.py  wrapper.py
tests/: test_ten_vad.c  test_ten_vad_enhanced.py  text.md
testset/: testset-audio-10.scv  testset-audio-14.scv  testset-audio-15.scv
